# microlaunch

./: .gitignore  .gitmodules  .tokeignore  BUILDING.md  Cargo.toml  DALAMUD.md  README.md  USAGE.md  ffxiv_dx11.dxvk-cache  microlaunch-example.toml
appimage-docker/: APPIMAGE.md  build-appimage.sh
appimage-docker/assets/: AppRun  microlaunch.desktop
appimage-docker/docker/: Dockerfile  build.sh
client/: Cargo.toml
client/src/: config.rs  gui.rs  launch.rs  main.rs  other.rs  persist.rs  steamworks.rs
client/src/auth/: mod.rs  steam.rs
client/src/launch/: dalamud.rs  mod.rs  proton.rs  strategy.rs
client/src/session/: mod.rs
config_examples/: direct_launch_example.toml  proton_example.toml
microlaunch/: Cargo.toml  build.rs
microlaunch/src/: config.rs  gui.rs  main.rs  other.rs  steamworks.rs
microlaunch/src/auth/: mod.rs  steam.rs
microlaunch/src/gui/: mod.rs  style.rs
microlaunch/src/integrity/: hash.rs  mod.rs
microlaunch/src/launch/: dalamud.rs  mod.rs
microlaunch/src/session/: mod.rs
nael/: Cargo.toml  README.md
nael/src/: api.rs  main.rs
sqexcrypt/: Cargo.toml
sqexcrypt/src/: ecb.rs  enc.rs  lib.rs  memorystream.rs  sqexrand.rs
