[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3.2"
eframe = "0.17.0"
egui = "0.17.0"
hex = "0.4.3"
itertools = "0.10.3"
lazy_static = "1.4.0"
parking_lot = "0.12.0"
rand = "0.8.5"
regex = "1.5.5"
reqwest = "0.11.10"
ring = "0.16.20"
serde = { version = "1.0.136", features = ["derive"] }
sha2 = "0.10.2"
tokio = {version = "1.17.0", features = ["full"]}
toml = "0.5.8"
steamworks = {path = "../steamworks-rs"}
sqexcrypt = {path = "../sqexcrypt"}