[package]
name = "microlaunch"
description = "A native, versatile FINAL FANTASY XIV Online launcher made for Linux."
authors = ["Rin <lostkagamine@outlook.com>"]
license = "MIT"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3.2"
hex = "0.4.3"
itertools = "0.10.3"
lazy_static = "1.4.0"
parking_lot = "0.12.0"
rand = "0.8.5"
regex = "1.5.5"
reqwest = "0.11.10"
ring = "0.16.20"
serde = { version = "1.0.136", features = ["derive"] }
sha2 = "0.10.2"
tokio = {version = "1.17.0", features = ["full"]}
toml = "0.5.8"
steamworks = {path = "../steamworks-rs"}
sqexcrypt = {path = "../sqexcrypt"}
aes-gcm = "0.9.4"
dirs = "4.0.0"
bincode = "1.3.3"
rand_chacha = "0.3.1"
clap = { version = "3.1.9", features = ["derive"] }
serde_json = "1.0.79"
