[package]
name = "nael"
description = "Standalone Dalamud downloader."
authors = ["Rin <lostkagamine@outlook.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
reqwest = "0.11.10"
ring = "0.16.20"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
data-encoding = "2.3.2"
